--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,13 +2,5 @@
 
 <h1>Articles</h1>
 
-<div id="articles">
-  <% @articles.each do |article| %>
-    <%= render article %>
-    <p>
-      <%= link_to "Show this article", article %>
-    </p>
-  <% end %>
-</div>
-
+<%= render 'article' %>
 <%= link_to "New article", new_article_path %>
