--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
-<p><strong>Title : </strong> @article.title</p>
-<p><strong>Description : </strong> @article.description</p>
+<p><strong>Title : </strong> <%=@article.title%></p>
+<p><strong>Description : </strong> <%=@article.description%></p>
 
 
 
