--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,14 +1,32 @@
 
 <div id="articles">
-<% @articles.each do |article| %>
     
-    <p><strong>Title : </strong><%=article.title%></p>
-    <p><strong>Description : </strong><%=article.description%></p>
-    <p>By : <%= article.user.username%></p>
-    <p>
-        <%= link_to "Show this article", article %>
-    </p>
-    <hr>
-<% end %>
+    <% @articles.each do |article| %>
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="col-8 mt-4">
+                    <div class="card text-center shadow-sm mb-5 bg-white rounded">
+                        <div class="card-header">
+                            By <i><%= article.user.username%></i>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title"></strong><%= link_to article.title, article, style:"text-decoration:none"%></h5>
+                            <p class="card-text"><%=truncate(article.description,length:100)%></p>
+                            <%= button_to "Delete",article_path(article),  form: {style: 'display:inline-block;'},class:"btn btn-outline-danger", method: :delete%>
+                            <%= link_to "Show", article, class:"btn btn-outline-success mr-3" %>
+                            <%= link_to "Edit", edit_article_path(article), class:"btn btn-outline-info" %>
+                            <p>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <small>Posted <%= time_ago_in_words(article.created_at) %> ago</small>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <% end %>
 </div>
 
