--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,26 +1,31 @@
-<%= form_with(model: article) do |f| %>
-  <% if article.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
 
-      <ul>
-        <% article.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+<div class="container">
+  <div class="row justify-content-center">
+      <div class="col-10">
+      <%= render 'shared/errors', obj:@article %>
+        <%= form_with(model: @article, class:'shadow-sm p-3 mb-5 bg-secondary rounded') do |f| %>
+          <div class="form-group row">
+              <%= f.label :title, class:'col-2 col-form-label text-light'%>
+              <div class="col-10">
+                <%= f.text_field :title, class:'form-control shadow-sm mb-2 rounded', placeholder:'Enter Title' %>
+              </div>
+          </div>
+          <div class="form-group row mt-4">
+              <%= f.label :description, class:'col-2 col-form-label text-light'%>
+              <div class="col-10">
+                <%= f.text_area :description, rows:10, class:'form-control shadow-sm mb-2 rounded', placeholder:'Enter Description' %>
+              </div>
+          </div>
+          <div class="form-group row mt-4 justify-content-center">
+            <%= f.submit class:"col-3 btn btn-primary btn-large " %>
+          </div>
         <% end %>
-      </ul>
-    </div>
-  <% end %>
-    <p>
-        <%= f.label :title %><br>
-        <%= f.text_field :title %>
-        
-    </p>
-    <p>
-        <%= f.label :description %><br>
-        <%= f.text_area :description %>
-        
-    </p>
-  <div>
-    <%= f.submit %>
+      </div>
+    <br>
+    
+   
   </div>
-<% end %>
+</div>
+<div class="container text-center">
+  <%= link_to "Back to articles", articles_path, class:"btn btn-primary" %>
+</div>
