--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,13 @@
-<p style="color: green"><%= notice %></p>
 
-<h1>Articles</h1>
-<div class="flickr_pagination">
+<h1 class="text-center mt-4">All Articles</h1>
+
+<div class="text-center">
+    <%= link_to "New article", new_article_path, class:"btn btn-primary btn-lg" %>
+</div>
+<div class="flickr_pagination mt-4">
     <%= will_paginate @articles, :container => false %>
 </div>
 <%= render 'article' %>
-<%= link_to "New article", new_article_path %>
+<div class="text-center">
+    <%= link_to "New article", new_article_path, class:"btn btn-primary btn-lg" %>
+</div>
