--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,34 @@
-<p style="color: green"><%= notice %></p>
-
-<p><strong>Title : </strong> <%=@article.title%></p>
-<p><strong>Description : </strong> <%=@article.description%></p>
+<h2 class="text-center mt-4">Showing Articles details</h2>
 
 
+<div id="articles">
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-8 mt-4">
+        <div class="card text-center shadow-sm mb-5 bg-white rounded">
+            <div class="card-header">
+              By <i><%= @article.user.username%></i>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"></strong><%= link_to @article.title, @article, style:"text-decoration:none"%></h5>
+              <p class="card-text"><%=truncate(@article.description,length:100)%></p>
+              <p>
+              <%= button_to "Delete", article_path(@article), form: {style: 'display:inline-block;'}, class:"btn btn-outline-danger", method: :delete%>
 
-<div>
-  <%= link_to "Edit this article", edit_article_path(@article) %> |
-  <%= link_to "Back to articles", articles_path %>
-  <p></p>
-  <%= button_to "Destroy this article", @article, method: :delete %>
+              <%= link_to "Edit", edit_article_path(@article), class:"btn btn-outline-info" %>
+            </div>
+            <div class="card-footer text-muted">
+              <small>Posted <%= time_ago_in_words(@article.created_at) %> ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
+        
+    </div>
+  </div>
+</div>
+
+
+<div class="container text-center">
+  <%= link_to "Back to articles", articles_path, class:"btn btn-primary" %>
 </div>
