--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,12 @@
-<%= link_to "All Articles", articles_path %> | 
-<%= link_to "Bloggers", users_path %> | 
-<%= link_to "Signup", signup_path %> 
+
+<div class="container mt-3">
+    <div class="card">
+    <%= image_tag 'patrick-fore-0gkw_9fy0eQ-unsplash.jpg', style: 'opacity:70%;height:500px;width:auto;background-position:center center; background-size:cover'%>
+    <div class="card-img-overlay">
+    <div class="card-body text-center" style="align-items:center">
+        <h2 class="card-title text-light">Alpha Blog</h2>
+        <h3 class="card-text text-light mt-4">Alpha Blog is a platform where you can add articles, and share it with the world.</h3>
+        <%= link_to "Signup", signup_path, class:"btn btn-primary btn-lg mt-5" %> 
+    </div>
+    </div>
+</div>
