--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,34 @@
-<h1>Alpha Bloggers</h1>
+<h1 class="text-center mt-4">Alpha Bloggers</h1>
 
 <div class="flickr_pagination">
     <%= will_paginate @users, :container => false %>
 </div>
-<div id="articles">
-<% @users.each do |user| %>
+
+<div id="users">
     
-    <p><strong>Username : </strong><%=user.username%></p>
-    <%= link_to gravatar_for(user), user%>
-    <p><%= user.articles.count %> articles </p>
-    <p>
-        <%= link_to "View Profile", user %> | 
-        <%= link_to "Edit Profile", edit_user_path(user) %> 
-    </p>
-    <p><small>Joined <%= time_ago_in_words(user.created_at) %> ago</small></p>
-    <hr>
-<% end %>
-</div>      
+    <% @users.each do |user| %>
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="col-8 mt-4">
+                    <div class="card text-center shadow-sm mb-5 bg-white rounded">
+                        <div class="card-header">
+                            <strong><%=link_to user.username, user, style:"text-decoration:none" %></strong>
+                        </div>
+                        <div class="card-body">
+                            <%= link_to gravatar_for(user), user%>
+                            <p><%= user.articles.count %> articles<p>
+                            <%= link_to "View Profile", user ,class:"btn btn-outline-primary"%>
+                            <%= link_to "Edit Profile", edit_user_path(user), class:"btn btn-outline-warning " %> 
+                        </div>
+                        <div class="card-footer text-muted">
+                            <small>Joined <%= time_ago_in_words(user.created_at) %> ago</small>    
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <% end %>
+</div>
+     
