--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,9 +12,13 @@
                         <div class="card-body">
                             <h5 class="card-title"></strong><%= link_to article.title, article, style:"text-decoration:none"%></h5>
                             <p class="card-text"><%=truncate(article.description,length:100)%></p>
-                            <%= button_to "Delete",article_path(article),  form: {style: 'display:inline-block;'},class:"btn btn-outline-danger", method: :delete%>
+                            <% if logged_in? && article.user==current_user %>
+                                <%= button_to "Delete",article_path(article),  form: {style: 'display:inline-block;'},class:"btn btn-outline-danger", method: :delete%>
+                            <% end%>    
                             <%= link_to "Show", article, class:"btn btn-outline-success mr-3" %>
-                            <%= link_to "Edit", edit_article_path(article), class:"btn btn-outline-info" %>
+                            <% if logged_in? && article.user==current_user %>
+                                <%= link_to "Edit", edit_article_path(article), class:"btn btn-outline-info" %>
+                            <%end%>
                             <p>
                         </div>
                         <div class="card-footer text-muted">
