--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,17 @@
 
 <h1 class="text-center mt-4">All Articles</h1>
 
+<% if logged_in? %>
 <div class="text-center">
     <%= link_to "New article", new_article_path, class:"btn btn-primary btn-lg" %>
 </div>
+<%end%>
 <div class="flickr_pagination mt-4">
     <%= will_paginate @articles, :container => false %>
 </div>
 <%= render 'article' %>
+<% if logged_in?%>
 <div class="text-center">
     <%= link_to "New article", new_article_path, class:"btn btn-primary btn-lg" %>
 </div>
+<%end%>
