--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,11 +16,14 @@
        
             <% if logged_in? %>
                 <li class="nav-item">
-                    <%= link_to "Logout", logout_path, method: :delete, class:"nav-link active"  %>
+                    <%= link_to current_user.username,user_path(current_user), class:"nav-link active" %>
+                </li>
+                <li class="nav-item"> 
+                    <%= button_to "Logout", logout_path, method: :delete, class:"nav-link active ml-2", form: {style: 'display:inline-block,border:none,background-color:transparent'}  %>
                 </li>
             <% else %> 
                 <li class="nav-item">
-                    <%= link_to "Login", login_path, class:"nav-link active" %> |
+                    <%= link_to "Login", login_path, class:"nav-link active" %>
                 </li>
                 <li class="nav-item">
                     <%= link_to "Signup", signup_path, class:"nav-link active" %> 
