--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,9 @@
                             <%= link_to gravatar_for(user), user%>
                             <p><%= user.articles.count %> articles<p>
                             <%= link_to "View Profile", user ,class:"btn btn-outline-primary"%>
-                            <%= link_to "Edit Profile", edit_user_path(user), class:"btn btn-outline-warning " %> 
+                            <% if logged_in? && user==current_user %>
+                                <%= link_to "Edit Profile", edit_user_path(user), class:"btn btn-outline-warning " %> 
+                            <%end%>
                         </div>
                         <div class="card-footer text-muted">
                             <small>Joined <%= time_ago_in_words(user.created_at) %> ago</small>    
