--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,12 @@
-<h1><%= @user.username %>'s profile page </h1>
+<h1 class="text-center mt-4"><%= @user.username %>'s profile page </h1>
+<div class="text-center">
+    <%=gravatar_for @user %>
 
-<%=gravatar_for @user %>
-
-<h3>Articles</h3>
-
+    <% if logged_in? && @user==current_user %>
+    <div class="mt-4 text-center">
+        <%= link_to "Edit Profile", edit_user_path(@user), class:'btn btn-outline-info' %>
+    </div>
+    <%end%>
+    <h3 class="mt-5"><%= @user.username %>'s Articles</h3>
+</div>
 <%=render 'articles/article' %>
