--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,10 +13,11 @@
               <h5 class="card-title"></strong><%= link_to @article.title, @article, style:"text-decoration:none"%></h5>
               <p class="card-text"><%=truncate(@article.description,length:100)%></p>
               <p>
-              <% if logged_in? && @article.user==current_user %>
+              <% if logged_in? && (@article.user==current_user || current_user.admin?) %>
                 <%= button_to "Delete", article_path(@article), form: {style: 'display:inline-block;'}, class:"btn btn-outline-danger", method: :delete%>
-
-                <%= link_to "Edit", edit_article_path(@article), class:"btn btn-outline-info" %>
+                <% if @article.user==current_user || current_user.admin? %>
+                  <%= link_to "Edit", edit_article_path(@article), class:"btn btn-outline-info" %>
+                <%end%>
               <%end%>  
             </div>
             <div class="card-footer text-muted">
