--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,32 +1,41 @@
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
 <div class="container-fluid">
-    <a class="navbar-brand" href="/">Alpha Blog</a>
+    <a class="navbar-brand text-light" href="/">Alpha Blog</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <%= link_to 'Articles', articles_path, class:"nav-link active" %>
+                <%= link_to 'Articles', articles_path, class:"nav-link text-light active" %>
             </li>
             <li class="nav-item">
-                <%= link_to 'Bloggers', users_path, class:"nav-link active" %>
+                <%= link_to 'Bloggers', users_path, class:"nav-link text-light active" %>
             </li>
-       
             <% if logged_in? %>
+                <% if !current_user.admin?%>
                 <li class="nav-item">
-                    <%= link_to current_user.username,user_path(current_user), class:"nav-link active" %>
+                    <%= link_to current_user.username,user_path(current_user), class:"nav-link text-light active" %>
+                </li>
+                <%else%>
+                    <li class="nav-item">
+                        <%= link_to "[Admin]",user_path(current_user), class:"nav-link text-light active" %>
+                    </li>
+                    <li class="nav-item text-light">
+                        <%= link_to current_user.username,user_path(current_user), class:"nav-link text-light active" %>
+                    </li>
+                <%end%>
                 </li>
                 <li class="nav-item"> 
-                    <%= button_to "Logout", logout_path, method: :delete, class:"nav-link active ml-2", form: {style: 'display:inline-block,border:none,background-color:transparent'}  %>
+                    <%= button_to "Logout", logout_path, method: :delete, class:"nav-link btn btn-outline-primary active ml-2", form: {style: 'display:inline-block,border:none,background-color:black'}  %>
                 </li>
             <% else %> 
                 <li class="nav-item">
-                    <%= link_to "Login", login_path, class:"nav-link active" %>
+                    <%= link_to "Login", login_path, class:"nav-link active text-light" %>
                 </li>
                 <li class="nav-item">
-                    <%= link_to "Signup", signup_path, class:"nav-link active" %> 
+                    <%= link_to "Signup", signup_path, class:"nav-link active text-light" %> 
                 </li>
             <%end%>
         </div>
