--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,10 +17,16 @@
                         <div class="card-body">
                             <%= link_to gravatar_for(user), user%>
                             <p><%= user.articles.count %> articles<p>
-                            <%= link_to "View Profile", user ,class:"btn btn-outline-primary"%>
-                            <% if logged_in? && user==current_user %>
-                                <%= link_to "Edit Profile", edit_user_path(user), class:"btn btn-outline-warning " %> 
+                            <% if logged_in? %>
+                                <% if current_user.admin? %>
+                                    <%= button_to "Delete Profile", user_path(user), form: {style: 'display:inline-block;'}, class:"btn btn-outline-danger", method: :delete%>
+                                <% end%>
+                                <% if user==current_user %>
+                                    <%= link_to "Edit Profile", edit_user_path(user), class:"btn btn-outline-warning " %> 
+                                <%end%>
                             <%end%>
+
+                            <%= link_to "View Profile", user ,class:"btn btn-outline-primary"%>
                         </div>
                         <div class="card-footer text-muted">
                             <small>Joined <%= time_ago_in_words(user.created_at) %> ago</small>    
