--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
     <% if logged_in? && @user==current_user %>
     <div class="mt-4 text-center">
         <%= link_to "Edit Profile", edit_user_path(@user), class:'btn btn-outline-info' %>
+        <%= button_to "Delete profile", user_path(current_user), class:"btn btn-outline-warning", form: {style: 'display:inline-block'}, method: :delete, data: {confirm:"Are you sure?"} %>
     </div>
     <%end%>
     <h3 class="mt-5"><%= @user.username %>'s Articles</h3>
