--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,6 +1,6 @@
 <% if obj.errors.any? %>
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <h3>Following errors occured</h3>
+    <h3 class="alert-heading">Following errors occured</h3>
     <ul>
         <% obj.errors.each do |error| %>
         <li><%= error.full_message %></li>
