--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -22,5 +22,5 @@
 </div>
 </div>
 <div class="container text-center">
-<%= link_to "Back to articles", articles_path, class:"btn btn-primary" %>
+<%= link_to "Back to categories", categories_path, class:"btn btn-primary" %>
 </div>
