--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -8,6 +8,10 @@
                     <div class="card text-center shadow-sm mb-5 bg-white rounded">
                         <div class="card-header">
                             By <i><%= article.user.username%></i>
+                            <br>
+                            <% if article.categories.any?%>
+                                <div class="mt-2"><%= render article.categories %></div>
+                            <%end%>
                         </div>
                         <div class="card-body">
                             <h5 class="card-title"></strong><%= link_to article.title, article, style:"text-decoration:none"%></h5>
