--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,6 +16,12 @@
                 <%= f.text_area :description, rows:10, class:'form-control shadow-sm mb-2 rounded', placeholder:'Enter Description' %>
               </div>
           </div>
+          <div class="form-group row mt-4">
+              <%= f.label :category, class:'col-2 col-form-label text-light'%>
+              <div class="col-10">
+                <%= f.collection_select(:category_ids, Category.all, :id, :name, {prompt:"Make your selection from the list of below"}, {multiple:true,class:"form-select shadow-sm mb-2 rounded"}) %>
+              </div>
+          </div>
           <div class="form-group row mt-4 justify-content-center">
             <%= f.submit class:"col-3 btn btn-primary btn-large " %>
           </div>
