--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,12 @@
         <div class="card text-center shadow-sm mb-5 bg-white rounded">
             <div class="card-header">
               By <i><%= @article.user.username%></i>
+              <br>
+              <% if @article.categories.any?%>
+                <div class="mt-2"><%= render @article.categories %></div>
+              <%end%>
             </div>
+
             <div class="card-body">
               <h5 class="card-title"></strong><%= link_to @article.title, @article, style:"text-decoration:none"%></h5>
               <p class="card-text"><%=truncate(@article.description,length:100)%></p>
