--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,13 @@
 <h1 class="text-center">Category : <%= @category.name %> </h1>
+<% if logged_in? && current_user.admin? %>
+    <div class="mt-4 text-center">
+     <%= link_to "Edit Category name", edit_category_path(@category), class:'btn btn-outline-info' %>
+    </div>
+<%end%>
+<div class="flickr_pagination mt-4">
+    <%= will_paginate @articles, :container => false %>
+</div>
+<%=render 'articles/article' %>
+<div class="flickr_pagination mt-4">
+    <%= will_paginate @articles, :container => false %>
+</div>
