--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,17 @@
             <li class="nav-item">
                 <%= link_to 'Bloggers', users_path, class:"nav-link text-light active" %>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Categories
+                </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><%=link_to "All Categories", categories_path, class:"dropdown-item"%></li>
+              <% if logged_in? && current_user.admin? %>
+                <li><%=link_to "New Categories", new_category_path, class:"dropdown-item"%></li>
+              <% end %> 
+            </ul>
+          </li>
             <% if logged_in? %>
                 <% if !current_user.admin?%>
                 <li class="nav-item">
