--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,7 +18,7 @@
               <h5 class="card-title"></strong><%= link_to @article.title, @article, style:"text-decoration:none"%></h5>
               <p class="card-text"><%=truncate(@article.description,length:100)%></p>
               <p>
-              <% if logged_in? && (@article.user==current_user || current_user.admin?) %>
+              <% if user_signed_in? && (@article.user==current_user || current_user.admin?) %>
                 <%= button_to "Delete", article_path(@article), form: {style: 'display:inline-block;'}, class:"btn btn-outline-danger", method: :delete%>
                 <% if @article.user==current_user || current_user.admin? %>
                   <%= link_to "Edit", edit_article_path(@article), class:"btn btn-outline-info" %>
