--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,15 +19,15 @@
                 </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><%=link_to "All Categories", categories_path, class:"dropdown-item"%></li>
-              <% if logged_in? && current_user.admin? %>
+              <% if user_signed_in? && current_user.admin? %>
                 <li><%=link_to "New Categories", new_category_path, class:"dropdown-item"%></li>
               <% end %> 
             </ul>
           </li>
-            <% if logged_in? %>
+            <% if user_signed_in? %>
                 <% if !current_user.admin?%>
                 <li class="nav-item">
-                    <%= link_to current_user.username,user_path(current_user), class:"nav-link text-light active" %>
+                    <%= link_to current_user.email,user_path(current_user), class:"nav-link text-light active" %>
                 </li>
                 <%else%>
                     <li class="nav-item">
@@ -39,14 +39,14 @@
                 <%end%>
                 </li>
                 <li class="nav-item"> 
-                    <%= button_to "Logout", logout_path, method: :delete, class:"nav-link btn btn-outline-primary active ml-2", form: {style: 'display:inline-block,border:none,background-color:black'}  %>
+                    <%= button_to "Logout", destroy_user_session_path, method: :delete, class:"nav-link btn btn-outline-primary active ml-2", form: {style: 'display:inline-block,border:none,background-color:black'}  %>
                 </li>
             <% else %> 
                 <li class="nav-item">
-                    <%= link_to "Login", login_path, class:"nav-link active text-light" %>
+                    <%= link_to "Login", new_user_session_path, class:"nav-link active text-light" %>
                 </li>
                 <li class="nav-item">
-                    <%= link_to "Signup", signup_path, class:"nav-link active text-light" %> 
+                    <%= link_to "Signup", new_user_registration_path, class:"nav-link active text-light" %> 
                 </li>
             <%end%>
         </div>
