--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,2 +1,2 @@
 <%= link_to "All Articles", articles_path %> | 
-<%= link_to "Signup", signup_path %> 
+<%= link_to "Signup", new_user_registration %> 
