--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,9 +8,9 @@
         <h3 class="card-text text-light mt-4">Alpha Blog is a platform where you can add articles, and share it with the world. </h3>
 
         <h4 class="text-light">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</h4>
-        <% if !logged_in? %> 
-            <%= link_to "Signup", signup_path, class:"btn btn-primary btn-lg mt-5" %> 
-            <%= link_to "Login", login_path, class:"btn btn-warning btn-lg mt-5" %> 
+        <% if !user_signed_in? %> 
+            <%= link_to "Signup", new_user_registration_path, class:"btn btn-primary btn-lg mt-5" %> 
+            <%= link_to "Login", new_user_session_path, class:"btn btn-warning btn-lg mt-5" %> 
         <% else %>
             <%= link_to "Articles", articles_path, class:"btn btn-primary btn-lg mt-5"%>
         <%end%>
