--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,17 @@
-<h2>Forgot your password?</h2>
+<div class="mt-2">
+<h1><%= t('.forgot_your_password') %></h1>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+
+  <div class="form-group">
+    <b><%= f.label :email, "Registered Email"%></b>
+    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control mt-1' %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <br>
+  <div class="form-group">
+    <%= f.submit "Send email", class: 'btn btn-primary' %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+<%= render 'devise/shared/links' %>
