--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,45 @@
-<h2>Sign up</h2>
+<div class="text-center">
+  
+</div>
+<h1 class="mt-3"><%= t('.sign_up') %></h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "email" %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+<div class="row">
+  <div class="col-9 mt-2">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class="form-group">
+        <b><%= f.label :username %></b>
+        <%= f.text_field :username, autofocus: true, class: 'form-control mt-1' %>
+      </div>
+      <br>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="form-group">
+        <b><%= f.label :email %></b>
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control mt-1' %>
+      </div>
+      <br>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <div class="form-group">
+        <b><%= f.label :password %></b>
+        <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control mt-1' %>
 
-<%= render "devise/shared/links" %>
+        <% if @minimum_password_length %>
+          <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
+        <% end %>
+      </div>
+      <br>
+      <div class="form-group">
+        <b><%= f.label :password_confirmation %></b>
+        <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control mt-1' %>
+      </div>
+      <br>
+      <div class="form-group">
+        <%= f.submit "Sign up", class: 'btn btn-primary btn-lg' %>
+      </div>
+    <% end %>
+  
+  
+  </div>
+</div>
+
+<%= render 'devise/shared/links' %>
