--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4"><%= @user.email %>'s profile page </h1>
+<h1 class="text-center mt-4"><%= @user.username %>'s profile page </h1>
 <div class="text-center">
     <%=gravatar_for @user %>
 
@@ -8,6 +8,6 @@
         <%= button_to "Delete profile", user_path(current_user), class:"btn btn-outline-warning", form: {style: 'display:inline-block'}, method: :delete, data: {confirm:"Are you sure?"} %>
     </div>
     <%end%>
-    <h3 class="mt-5"><%= @user.email %>'s Articles</h3>
+    <h3 class="mt-5"><%= @user.username %>'s Articles</h3>
 </div>
 <%=render 'articles/article' %>
